对话可以从某一轮分叉出一段副本
